<resources>
    <string name="app_name">instagramClone</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <!-- Change the following strings as required -->
    <string name="back4app_app_id">S5QvneuTKrRufRH3NtTUqecAJEVFGHSMzWAtnvLL</string>
    <string name="back4app_client_key">nFlMsQHrdGW6wJoyiHFXLLzLLUQKGyEA9Bunhafw</string>
    <string name="description_content">logo</string>
    <string name="SignUp">Sign up</string>
    <string name="Login">Login</string>
    <string name="Username">username</string>
    <string name="Password">Password</string>
    <string name="email">email</string>
    <string name="name">Name</string>
    <string name="Bio">Bio</string>
    <string name="update">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>